qinglong/yml/bkxs-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: bkxs-cf-cdn-origin
  namespace: kt-bkxs
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cf-cdn-origin
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    kubesphere.io/creator: admin
spec:
  tls:
    - hosts:
        - www-bkxs.qinglong.cdn-origin.uk
        - m-bkxs.qinglong.cdn-origin.uk
      secretName: bkxs-cf-cdn-origin
  rules:
    - host: www-bkxs.qinglong.cdn-origin.uk
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: www
                port:
                  number: 8080
    - host: m-bkxs.qinglong.cdn-origin.uk
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: wap
                port:
                  number: 8080
